Only log object ids in loaded message if LOG_INDIVIDUAL_OBJECT_LOADS is set to true